
- Added Recent Xbe/Exe file menus

- Massive code re-organization.

- Lots of random optimizations

- Went lower level with certain components of
  emulation. This should allow progress to move
  faster, ironically.

- Some Xbe parsing and debug output fixes.
  You should now be able to deal with the
  slightly odd Linux Xbe files.

- Fixed GUI color issues

version: 0.6.0-pre12 (02/23/03)
--------------------------------

- HLE has advanced to intercepting Direct3D and
  Xapilib calls. A simple Xbox app built with a
  4361 or 4627 XDK has been shown to work.

version: 0.6.0-pre11 (02/09/03)
--------------------------------

- HLE has begun. Cxbx is capable of emulating a
  blank XDK project. That is, if you had the XDK
  and created an Xbox "game" that did absolutely
  nothing, Cxbx could run it :P. Sounds pointless,
  but it is actually very significant

- New icon! Pending approval for use by the author

version: 0.6.0-pre10 (02/07/03)
--------------------------------

- Tons of debug console output when opening, or
  converting, or saving xbe and exe files. This
  was very easy to add because of the flexible
  new debug console technique.

version: 0.6.0-pre9 (02/06/03)
--------------------------------

- Released source code under GNU license.

- Debugging interface changed. Much cleaner.

version: 0.5.2 (12/14/02)
--------------------------------

- Fixed a bug in section name generation. This might
  add some compatibility, not sure yet.

version: 0.5.1 (??/??/??)
--------------------------------

- more .xbe information added to core and xbe dump

version: 0.5.0 (11/16/02)
--------------------------------

- fixed a bug in displaying section digests.

- added conversion from .exe to .xbe!!

- more code cleanup, tiny ui improvements.

version: 0.4.4 (11/01/02)
--------------------------------

- updated .xbe structure for more acccuracy

- added/fixed alot of information in xbe info
  dumps. most notably is the TLS information, 