@@ -23,6 +23,8 @@ version: 0.7.0 (??/??/??)
 
 - Fixed GUI color issues
 
+- Much better emulation exception handling
+
 version: 0.6.0-pre12 (02/23/03)
 --------------------------------
 
